src/styles/Presets.module.scss
@import './abstracts/_media.scss';
@import './constants.scss';

.presets {
  height: 100vh;
  width: 300px;
  background-color: $preset-bgColor;
  color: colorContrast($preset-bgColor);
  padding: 10px 0;
  border-right: 1px solid $borderR-color;
  position: relative;
  transition: 0.5s width ease-in-out;

  @include tablet {
    position: fixed;
    display: none;
  }

  &_collapsed {
    width: 0;

    .presets_collapse_btn {
      display: none;
    }
  }

  &_collapse_btn {
    all: unset;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 9;
    width: 24px;
    height: 24px;
    position: absolute;
    top: 12px;
    right: -12px;
    background: $light-gray;
    color: $preset-bgColor;
    box-shadow: colorContrast($preset-bgColor) 0px 0px 4px;
    border-radius: 50%;
    opacity: 0;
    transition: 0.2s opacity ease-in-out;
    cursor: pointer;
  }

  &_uncollapse_btn2,
  &_uncollapse_btn2_settings {
    all: unset;
    margin-right: 5px;
    cursor: pointer;
    outline: none !important;
    z-index: 9;
    width: 24px;
    height: 24px;
    top: 12px;
    display: none;
  }

  &_uncollapse_btn2_settings {
    display: flex;
    background-color: $light-gray;
    display: flex;
    align-items: center;
    justify-content: center;
    border-radius: 50%;
  }

  &_add_button {
    all: unset;
    cursor: pointer;
    padding: 10px;
    border-radius: 3px;
    margin-top: 0px;

    &:hover {
      background-color: $add-btn-hover;
    }
  }

  &_input {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 20px;
    margin-top: 10px;

    input {
      width: 79%;
      padding: 5px 8px;
      outline: none !important;
      border: 1px solid $dark-gray;
      border-radius: 5px;
    }

    button {
      all: unset;
      cursor: pointer;
      width: 7%;
      border-radius: 4px;
      padding: 3px;

      &:hover {
        background-color: $btn-hover;
      }
    }
  }
  .isPresetsCondition {
    color: $condition-disabled;
  }
}

.presets:hover .presets_collapse_btn {
  opacity: 1;
}

